loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:8: error: ')' expected but '}' found.
  }
  ^